--- a/tarea-semana-2/index.html
+++ b/tarea-semana-2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>My Restaurant</title>
+<title>My Restaurant web page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="css/style.css">
@@ -17,10 +17,10 @@
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-lx-12 ">
 			<div class="section">
-				<div class="titulo">
+				<div class="title">
 					<p id="sec1">Chicken</p>
 				</div>
-					<p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. 
@@ -30,10 +30,10 @@
 
 		<div class="col-lg-4 col-md-6 col-lx-12 ">
 			<div class="section">
-				<div class="titulo">
+				<div class="title">
 					<p id="sec2">Beef</p>
 				</div>
-					<p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. 
@@ -43,10 +43,10 @@
 
 		<div class="col-lg-4 col-md-12 col-lx-12">
 			<div class="section">
-				<div class="titulo">
+				<div class="title">
 					<p id="sec3">Sushi</p>
 				</div>
-					<p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. 
