--- a/Tablero Kamban/index.html
+++ b/Tablero Kamban/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 class="text-center my-5">Mi Tablero Kamban</h1>
+    <h1 class="text-center my-5 ">Mi Tablero Kamban</h1>
     <form id="formulario" class="col-lg-3 ">
         <input id="input" autofocus type="text" placeholder="Ingrese una tarea" class="form-control my-2">
 
@@ -59,8 +59,9 @@
     </div>
 
 
+
     <template id="template">
-        <div class="alert alert-warning d-flex justify-content-between align-items-center">
+        <div class="alert alert-danger d-flex justify-content-between align-items-center">
             <p class="m-0">Tarea 1</p>
             <h3 class="m-0">
                 <i class="fas fa-check-circle text-success" role="button"></i>
